# CudaSift

./: .gitignore  CMakeLists.txt  cudaImage.cu  cudaImage.h  cudaSift.h  cudaSiftD.cu  cudaSiftH.cu  cudaSiftH.h  mainSift.cpp  matching.cu
cmake/: FindTBB.cmake
cudasift/: CMakeLists.txt
cudasift/include/cudasift/: cudaImage.h  cudaSift.h  cudaSiftH.h  cudautils.h
cudasift/src/: cudaImage.cu  cudaSiftD.cu  cudaSiftH.cu  matching.cu
examples/: CMakeLists.txt  mainSift.cpp
